tests/ui/codegen/evm-ir/validation/parse_deferred_block.evmir
@module DeferredBlock

bb0:
  push_deferred bb1 //~ ERROR: expected integer literal
  stop
